--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
@@ -126,7 +126,7 @@
 					</a>
 				</td>
 				<td>
-					${item.asking_count}
+					${item.vote_count}
 				</td>
 				<td>
 					${item.participant_count}
@@ -139,9 +139,6 @@
 				</td>
 				<td>
 					${item.status}
-				</td>
-				<td>
-					${item.participant_count}
 				</td>
 				<td>
 					{{if (item.status === '未开始' || item.status === '已结束')}}
