隐藏团购活动的组件管理面板

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -182,6 +182,8 @@
     var bottomDistance = 110;
     /* 自动选中cid，当页面进来的时候 */
     W.autoSelectCid = 2;
+    //是否隐藏组件控制面板
+    W.hideActionPanel = true;
 
     var loadPages = function(pageManagerView) {
       W.getApi().call({
