--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -85,7 +85,7 @@
 	.wui-rank-list{
 		overflow: hidden;
 		position: relative;
-		margin-top: 10px;
+		padding-top: 10px;
 	}
 	.wui-search{
 		border-bottom: 1px solid #8E8E8E;
@@ -152,15 +152,19 @@
 	}
 	.wui-rank-vote{
 		overflow: hidden;
-	}
-	.wui-rank-vote > div{
-		float: left;
-		width: 50%;
 		text-align: center;
-		padding: 3px 0;
+		padding-bottom: 5px;
 	}
 	.wui-rank-voteLef{
-		border-right: 1px solid #8E8E8E;
+		float: left;
+		line-height: 2rem;
+		color: #ff4200;
+		font-size: 1.1rem;
+		padding-left: 5px;
+	}
+	.wui-rank-voteRig button{
+		float: right;
+		outline: none;
 	}
 	.wui-detail-dialog{
 		width:80%;
@@ -246,6 +250,17 @@
 	p.wui-noborder{
 		border: none;
 	}
+	.wui-vote-btn{
+		width: 3rem;
+		height: 2rem;
+		background-color: #ff4200;
+		color: #FFF;
+		border: none;
+        border-radius: 4px;
+        box-shadow: 0 3px 0px #b62f00;
+        font-family: SimHei;
+        font-size: 0.9rem;		
+	}
 </style>
 {% endblock %}
 
@@ -309,7 +324,7 @@
 				<span>{ result_list_count }</span>票
 			</div>
 			<div class="wui-rank-voteRig wa-ivote" data-member="{ member_id }">
-				投票
+				<button type="button" class="wui-vote-btn">投票</button>
 			</div>
 		</div> 
 	</div>
@@ -391,6 +406,10 @@
         //参与投票
         var voteLock = false;
         $('.wa-rank-list').on('click','.wa-ivote', function(){
+        	var left_chance = parseInt($('.wa-left-chance').html());
+        	if( !left_chance > 0) {
+        		return
+        	}
         	var that = $(this);
             if(voteLock) return false;
             voteLock = true;
@@ -425,7 +444,7 @@
 		
     });
 
-    $(function(){
+    $(function(){	
         if(W.isPC){
             showDesc();
             return false;
