--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -259,7 +259,39 @@
         border-radius: 4px;
         box-shadow: 0 3px 0px #b62f00;
         font-family: SimHei;
-        font-size: 0.9rem;		
+        font-size: 0.9rem;	
+    }	
+	.wui-share-mask{
+		z-index: 9999999999 !important;
+		display: none;
+	}
+	.wui-share-mask .wui-share-arrow{
+		width: 33%;
+		position: absolute;
+		top: 0;
+	    right: 4%;
+	}
+	.wui-share-mask .wui-share-invite{
+		color: #FFF;
+		font-family: SimHei;
+	    font-size: 1.5rem;
+	    position: absolute;
+	    top: 33%;
+        left: 17%;
+	}
+	.wui-share-mask .wui-share-close{
+		width: 10%;
+	    position: absolute;
+	    top: 60%;
+        left: 45%;
+	}
+	.wui-share-mask .wui-share-known{
+		color: #FFF;
+		font-family: SimHei;
+	    font-size: 1.5rem;
+	    position: absolute;
+	    top: 68%;
+        left: 42%;
 	}
 </style>
 {% endblock %}
@@ -339,7 +371,7 @@
 			</div>
 			<div class="wui-detail-btn">
 				<button>投票</button>
-				<button>拉票</button>
+				<button class="wa-detail-share">拉票</button>
 			</div>
 			<div class="wui-detail-middle">
 				<span class="wa-detail-serial-number"></span>
@@ -348,6 +380,12 @@
 		</div>
 		<div class="wui-detail-bottom wa-detail-bottom"></div>
 	</div>
+</div>
+<div class="wui-share-mask">
+	<img class="wui-share-arrow" src="/static_v2/img/shvote_arrow.png">
+	<span class="wui-share-invite">邀请你的小伙伴,帮你投票</span>
+	<img class="wui-share-close wa-share-close" src="/static_v2/img/shvote_share_close.png">
+	<span class="wui-share-known">知道了</span>
 </div>
 {% endblock %}
 
@@ -577,5 +615,19 @@
 		$('#userDetailDialog').hide();
 		$('.wa-detail-close').hide();
 	});
+	$('body').delegate('.wa-detail-share', 'click', function(event) {
+		shareMask('show');
+	});
+	$('body').delegate('.wa-share-close', 'click', function(event) {
+		shareMask('hide');
+	});
+	//拉票遮罩
+    function shareMask(action){
+        if('show' == action){
+            $('.wui-share-mask').swipeMask('show');
+        }else if('hide' == action){
+            $('.wui-share-mask').swipeMask('hide');
+        }
+    }
 </script>
 {% endblock %}
