--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -29,6 +29,9 @@
 	.wui-surveyDescription{
 		padding: 10px;
 	}
+	.wui-surveyDescription img{
+		width: 100%;
+	}
 	.wui-dynamic-info{
 		background: #fff;
 	}
