--- a/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
@@ -10,15 +10,21 @@
         <img src="{{ component.model.material_image }}">
     </div>
     <div class="wa-shvote-desc wui-i-details">
-        <h1 class="wui-i-title xa-title">{{component.model.title}}</h1>
+        <div class="wui-i-header">
+            <h1 class="wui-i-title xa-title">{{component.model.title}}</h1>
+            <div class="wui-i-gradient"></div>            
+        </div>
         <p class="wui-i-time">
-            活动时间：{{component.model.start_time|space_split_0}}~{{component.model.end_time|space_split_0}}
+            活动时间：<span>{{component.model.start_time|space_split_0}} - {{component.model.end_time|space_split_0}}</span>
+            <div class="wui-i-gradient"></div>
         </p>
         <div class="wui-i-rule">
             <span>投票规则</span><p>{{component.model.rule}}</p>
+            <div class="wui-i-gradient"></div>
         </div>
         <div class="wui-i-description">
-            <span>活动介绍</span><p>{{component.model.description|safe}}</p>
+            <span>活动介绍</span>
+            {{component.model.description|safe}}
         </div>
         <div class="wui-i-btn">
             <button class="wa-getback wui-i-getback">返回投票&gt;&gt;</button>
