--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -54,8 +54,7 @@
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchReview">批量审核通过</a>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">批量删除</a>
-			<button type="button" class="btn btn-success fr mr10 xa-create_member">创建选手
-			</button>
+			<a href="/apps/shvote/shvote_create_player/"><button type="button" class="btn btn-success fr mr10 xa-create_member">创建选手</button></a>
 		</div>
 		<div
 			class="panel-body panel-table p0 mt10"
