--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -71,15 +71,17 @@
 	}
 	.wui-group{
 		overflow: hidden;
+		height: 43px;
+		line-height: 43px;
 	}
 	.wui-group > div{
 		float: left;
-		font-size: 18px;
+		font-size: 16px;
 		text-align: center;
-		padding: 10px 0;
 	}
 	.wui-group > div.active{
 		color: #ff4200;
+		font-size: 20px;
 	}
 	.wui-link{
 		padding:0 10px;
