--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
@@ -38,16 +38,38 @@
 		width: 25px;
 		height: 25px;
 		line-height: 25px;
-		background: rgba(0,0,0,0.4);
+		background: rgba(0,0,0,0.3);
 		border-radius: 15px;
 		color: #fff;
 	}	
+	.wui-rank-table tbody tr:nth-child(1) td:nth-child(1){
+		background: url(/static_v2/img/no1.png) no-repeat 50% 50%;
+		background-size: 31px 33px;
+	}
+	.wui-rank-table tbody tr:nth-child(2) td:nth-child(1){
+		background: url(/static_v2/img/no2.png) no-repeat 50% 50%;
+		background-size: 28px 33px;
+	}
+	.wui-rank-table tbody tr:nth-child(3) td:nth-child(1){
+		background: url(/static_v2/img/no3.png) no-repeat 50% 50%;
+		background-size: 28px 33px;
+	}
+	.wui-rank-table tbody tr:nth-child(1) td:nth-child(1) span{
+		display: none;
+	}
+	.wui-rank-table tbody tr:nth-child(2) td:nth-child(1) span{
+		display: none;
+	}
+	.wui-rank-table tbody tr:nth-child(3) td:nth-child(1) span{
+		display: none;
+	}
 	.wui-rank-table tbody tr td:nth-child(2){
-		width: 60%;
+		width: 45%;	
+		text-align: left;
 	}
 	.wui-rank-table tbody tr td:nth-child(2) img{
 		vertical-align: middle;
-		margin-right: 10px;
+		margin-right: 15px;
 	}
 	.wui-count{
 		color: #ff4200;
@@ -70,7 +92,7 @@
 	<div>{{group}}</div>
 	{% endfor %}
 </div>
-<table class="wui-rank-table">
+<table class="wui-rank-table wa-rank-table">
 	<thead>
 		<tr>
 			<th>排名</th>
@@ -124,7 +146,6 @@ $(function(){
 	});	
 });
 
-
 function getRankInfo(current_group,search_name){
         W.getApi().call({
             app: 'm/apps/shvote',
@@ -156,5 +177,6 @@ function getRankInfo(current_group,search_name){
             }
         });
     }
+
 </script>
 {% endblock %}
