--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
@@ -48,11 +48,11 @@
 	}
 	.wui-rank-table tbody tr:nth-child(2) td:nth-child(1){
 		background: url(/static_v2/img/no2.png) no-repeat 50% 50%;
-		background-size: 28px 33px;
+		background-size: 27px 33px;
 	}
 	.wui-rank-table tbody tr:nth-child(3) td:nth-child(1){
 		background: url(/static_v2/img/no3.png) no-repeat 50% 50%;
-		background-size: 28px 33px;
+		background-size: 27px 33px;
 	}
 	.wui-rank-table tbody tr:nth-child(1) td:nth-child(1) span{
 		display: none;
@@ -70,6 +70,7 @@
 	.wui-rank-table tbody tr td:nth-child(2) img{
 		vertical-align: middle;
 		margin-right: 15px;
+		border-radius: 25px;
 	}
 	.wui-count{
 		color: #ff4200;
