--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -93,7 +93,7 @@
 	.wui-rank-list{
 		overflow: hidden;
 		position: relative;
-		padding: 10px;
+		padding: 0 10px;
 		background: #ffe145;
 	}
 	.wui-search{
@@ -111,7 +111,7 @@
 		position: relative;
 	}
 	.wui-searchBox p{
-		line-height: 100%;
+		line-height: 17px;
 		text-indent: 30px;
 		padding-top: 7px;
 		padding-bottom: 7px;
@@ -137,12 +137,12 @@
 		top: 0;
 		padding: 0 15px;
 		outline: none;
-		font-family: '黑体'
+	
 	}
 	.wui-rank-item{
-		width: 49%;
+		width: 48%;
 		float: left;
-		margin-bottom: 10px;
+		margin-top: 10px;
 	}
 	.wui-item-content{
 		padding: 7px;
@@ -154,7 +154,6 @@
 	}
 	.wui-rank-pic{
 		height:130px;
-		border-bottom: 1px solid #8E8E8E;
 		overflow: hidden;
 		position: relative;
 	}
