--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -105,7 +105,7 @@
 				</th>
 				<th width="80">单价/数量</th>
 				<th width="140">优惠金额</th>
-				<th width="100">买家</th>
+				<th width="100">买家(收货人)</th>
 				<th width="110">实付金额</th>
 				<th width="90">订单状态</th>
 				<th width="90">操作</th>
