--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
@@ -7,13 +7,13 @@
 	}
 	.wui-rank-groups{
 		font-size : 0;
-		padding: 10px 0;
 	}
 	.wui-rank-groups div{
 		font-size: 1rem;
 		display: inline-block;
 		width: 25%;
 		text-align: center;
+		line-height: 200%;
 	}
 	.wui-rank-groups div.active{
 		color: red;
