--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -268,7 +268,7 @@
 		border: none;
 	}
 	.wui-vote-btn{
-		width: 3.8rem;
+		width: 3.2rem;
 		height: 2rem;
 		background-color: #ff4200;
 		color: #FFF;
@@ -309,6 +309,14 @@
 	    position: absolute;
 	    top: 68%;
         left: 42%;
+	}
+	@media only screen and (max-width: 320px){
+		.wui-vote-btn{
+			width: 3.8rem;
+	    }	
+/*	    .wui-searchBtn{
+	    	height: 36px;
+	    }*/
 	}
 </style>
 {% endblock %}
